# metabuf

./: .gitignore  CMakeLists.txt  README.md  metabuf.sln
cmake/: pugixml_download.cmake
include/config/: Metaconfig.hpp
include/metabuf/: Memory.hpp  Metadata.hpp  Reader.hpp  metadata.hpp
metabuf/: ArchiveReader.hpp  Metabuf.cpp  Metabuf.hpp  Metaconfig.hpp  Metadata.cpp  Metadata.hpp  Reader.hpp  metabuf.vcxproj
metagen/: main.cpp  metagen.cpp  metagen.vcxproj  protocol.xml
metawrite/: main.cpp  metawrite.cpp  metawrite.vcxproj
sandbox/: Metacode.cpp  Metacode.h  Metacode.hpp  Metatype.h  Metatype.hpp  main.cpp  protocol.xml  sandbox.vcxproj
sandbox_reader/: sandbox_reader.cpp  sandbox_reader.vcxproj
src/metabuf/: Memory.cpp  Metadata.cpp
src/metagen/: metagen.cpp
src/sandbox_reader/: sandbox_reader.cpp
src/xml2metabuf/: Xml2Metabuf.cpp  Xml2Metabuf.hpp  Xml2Metacode.cpp  Xml2Metacode.hpp  XmlCRC32.cpp  XmlCRC32.hpp  XmlProtocol.cpp  XmlProtocol.hpp
tests/: CMakeLists.txt  Example.xml  Metacode.cpp  Metacode.h  Metatype.cpp  Metatype.h  Metautils.cpp  Metautils.h  Protocol.xml  test_generate_bin.cpp  test_make_metacode.cpp  test_memory_leak.cpp  test_metacode.cpp  test_metacode.h  test_metatype.cpp  test_metatype.h  test_open_protocol.cpp  test_parse_bin.cpp  test_utils.cpp  test_utils.h
trunk/: metabuf.sln
trunk/metabuf/: ArchiveReader.hpp  Array.hpp  Metabuf.cpp  Metabuf.hpp  Metaconfig.hpp  metabuf.vcxproj
trunk/sandbox/: 101_Fork.xml  Metacode.cpp  Metacode.h  Metacode.hpp  Metatype.h  Metatype.hpp  main.cpp  protocol.xml  sandbox.vcxproj
trunk/sandbox_reader/: main.cpp  sandbox_reader.vcxproj
trunk/xml2metabuf/: Xml2Metabuf.cpp  Xml2Metabuf.hpp  Xml2Metacode.cpp  Xml2Metacode.hpp  XmlProtocol.cpp  XmlProtocol.hpp  xml2metabuf.vcxproj
xml2metabuf/: Xml2Metabuf.cpp  Xml2Metabuf.hpp  Xml2Metacode.cpp  Xml2Metacode.hpp  XmlProtocol.cpp  XmlProtocol.hpp  xml2metabuf.vcxproj
