cmake_minimum_required(VERSION 3.0)

set( METABUF_LIBRARY_NAME metabuf )

PROJECT(metabuf)

OPTION( METABUF_EXTERNAL_BUILD "METABUF_EXTERNAL_BUILD" OFF )
OPTION( METABUF_METAGEN "METABUF_METAGEN" ON )
OPTION( METABUF_XML2METABUF "METABUF_XML2METABUF" OFF )
OPTION( METABUF_PUGIXML_EXTERNAL "METABUF_PUGIXML_EXTERNAL" OFF )
OPTION( METABUF_PUGIXML_INCLUDE_DIR "METABUF_PUGIXML_INCLUDE_DIR" OFF )
OPTION( METABUF_PUGIXML_LIBRARY_NAME "METABUF_PUGIXML_LIBRARY_NAME" OFF )
OPTION( METABUF_CONFIG "METABUF_CONFIG" OFF )
OPTION( METABUF_INSTALL "METABUF_INSTALL" OFF )


IF( NOT METABUF_EXTERNAL_BUILD )
    set( CMAKE_CXX_STANDARD 14 )
    
    SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE} )
    
    if(MSVC)
        add_definitions(-D_CRT_SECURE_NO_WARNINGS)
        add_definitions(-D_SCL_SECURE_NO_WARNINGS)

        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
        set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /MT")

        set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /MTd")
        set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /MT")
        set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} /MT")    
    endif()
ENDIF()

IF(METABUF_CONFIG)
    add_definitions(-DMETABUF_CONFIG=${METABUF_CONFIG})
ENDIF()

SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf/Metaconfig.hpp )
SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf/Metadata.cpp )
SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf/Metadata.hpp )
SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf/Reader.hpp )

INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf )

ADD_LIBRARY( ${PROJECT_NAME} STATIC ${METABUF_SOURCE_FILES} )

if(METABUF_INSTALL)
    install(DIRECTORY include
        DESTINATION .
        FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")

    install(TARGETS ${PROJECT_NAME}
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
endif()

if( METABUF_METAGEN OR METABUF_XML2METABUF )
    if( NOT METABUF_PUGIXML_EXTERNAL )
        include(cmake/pugixml_download.cmake)
        
        set(METABUF_PUGIXML_INCLUDE_DIR ${pugixml_INCLUDE_DIR})
        set(METABUF_PUGIXML_LIBRARY_NAME ${pugixml_LIBRARY_NAME})
    endif()
endif()

if( METABUF_METAGEN OR METABUF_XML2METABUF )
    #xml2metabuf
    
    PROJECT(xml2metabuf)
    
    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf/Xml2Metabuf.cpp )
    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf/Xml2Metabuf.hpp )
    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf/Xml2Metacode.cpp )
    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf/Xml2Metacode.hpp )
    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf/XmlProtocol.cpp )
    set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf/XmlProtocol.hpp )
    
    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf )
    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIR} )
    
    ADD_LIBRARY( ${PROJECT_NAME} STATIC ${XML2METABUF_SOURCE_FILES} )
    
    if( NOT METABUF_PUGIXML_EXTERNAL )
        add_dependencies(${PROJECT_NAME} pugixml_download)
    endif()
endif()

if( METABUF_METAGEN )
    #metagen

    PROJECT(metagen)
    
    set( METAGEN_SOURCE_FILES ${METAGEN_SOURCE_FILES} metagen/metagen.cpp )

    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/metagen )
    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIR} )
    
    ADD_EXECUTABLE( ${PROJECT_NAME} ${METAGEN_SOURCE_FILES} )

    if( WIN32 )
        set_target_properties( ${PROJECT_NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:CONSOLE")
        set_target_properties( ${PROJECT_NAME} PROPERTIES COMPILE_DEFINITIONS "_CONSOLE")
    endif()
    
    target_link_libraries(${PROJECT_NAME} metabuf xml2metabuf)
    target_link_libraries(${PROJECT_NAME} ${XML2METABUF_LIBRARY_NAME})
    target_link_libraries(${PROJECT_NAME} ${METABUF_PUGIXML_LIBRARY_NAME})
    
    if( NOT METABUF_PUGIXML_EXTERNAL )
        add_dependencies(${PROJECT_NAME} pugixml_download)
    endif()
endif()